<resources>
    <string name="app_name">Security</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="phone_number">手机号</string>
    <string name="confirm_password">确认密码</string>
    <string name="identifying_code">验证码</string>
    <string name="acquire">获取</string>
    <string name="sos">求救</string>
    <string name="friends">好友</string>
    <string name="sight">发现</string>
    <string name="message">消息</string>
    <string name="personal">个人</string>
</resources>
